WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216741
Selection API: Fix selectAllChilden to return InvalidNodeTypeError when passed a DocumentType node
https://bugs.webkit.org/show_bug.cgi?id=216741
Summary
Selection API: Fix selectAllChilden to return InvalidNodeTypeError when passe...
Darin Adler
Reported
2020-09-19 19:39:19 PDT
Selection API: Fix selectAllChilden to return InvalidNodeTypeError when passed a DocumentType node
Attachments
Patch
(3.52 KB, patch)
2020-09-19 19:46 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2020-09-19 19:46:47 PDT
Created
attachment 409221
[details]
Patch
Ryosuke Niwa
Comment 2
2020-09-19 21:42:06 PDT
Comment on
attachment 409221
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409221&action=review
> Source/WebCore/ChangeLog:8 > + This is covered by tests, but the fix itself is only testable when live range
Can we add a test with <!-- test-runner-options?
Darin Adler
Comment 3
2020-09-20 11:01:56 PDT
We could, but do you want me to add tests that duplicate the WPT ones that we will just delete when we turn the flag on? I don’t think we should.
Darin Adler
Comment 4
2020-09-20 11:03:41 PDT
Comment on
attachment 409221
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409221&action=review
>> Source/WebCore/ChangeLog:8 >> + This is covered by tests, but the fix itself is only testable when live range > > Can we add a test with <!-- test-runner-options?
I’d prefer not to add tests that duplicate the Web Platform Tests coverage. But obviously in this one simple case I could add it. I just don’t think it’s valuable. The Web Platform Tests will be there when we turn the flag on.
EWS
Comment 5
2020-09-20 11:10:24 PDT
Committed
r267327
: <
https://trac.webkit.org/changeset/267327
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409221
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-09-21 12:01:30 PDT
<
rdar://problem/69318338
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug